# bad-code

./: LICENSE  README.md  example.csv  package.json
asm/: main.asm
c/: .clang-format  2darray.c  Makefile  TypingTutor.c  TypingTutor.h  abs.c  add.c  af_inet.c  arandel.c  argv.c  argv0.c  argv2.c  arithmetic-sequence.c  array-init.c  array-pointer-example.c  array-size.c  array-to-function.c  arraylist.c  arraypass.c  ascii.c  bad-formatting.c  badyn.c  bigalloc.c  bin2dec.c  bin2dec2.c  bitwise.c  bitwise.d  bolt.c  bubble.c  buildwin  c-js.c  cast.c  chii.c  clear.c  compare.c  compare.c.bad  count-occur.c  dayofweek.c  dec2bin.c  dice-dumb.c  (+188 more)
c++/: array.cpp  bar  bar.cpp  bitmask  bitmask.cpp  bug.cpp  cipher  cipher.cpp  compare-char.cpp  log.cpp  vectorcalc  vectorcalc.cpp  vectorcalc.cpp.orig
cpp/: array.cpp  vector.cpp
cracking/: CMakeLists.txt
execline/: wait
html/: caption.html  radio.html  style-block.html
java/: rectangle.java
javascript/: array-transform.js  array-unique.js  bad-format.js  codeorg-dumb.js  empty.js  function.js  is-snap.js  loop-dumb.js  matrixsum.js  nodejs_worker_threads.js  package-lock.json  package.json  regex.js  stringify.js  template.js  triangular.js
json/: fedora.json
little/: hello.l
m4/: cold-iron.m4  divert.m4  example.m4  grey.m4  include.m4  world.txt
make/: Makefile  Makefile.abspath  simple.mk  simple2.mk
nim/: example  example.js  helloworld  helloworld.js
node/: fifo  procsub  template-literals  x.html
nvim/: rc
odin/: Makefile  hellope
pascal/: EULER0.pas  (+6 more)
rust/rust-by-example/: Cargo.toml
(+717 files in other folders)
