[package]
name = "rust-by-example"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
# alters behavior!
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
